--- a/rock-paper-scissors/styles.css
+++ b/rock-paper-scissors/styles.css
@@ -4,17 +4,9 @@
     box-sizing: border-box;
 }
 
-body {
+main {
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-div {
-    border: 3px solid rgb(97, 55, 0);
 }
 
 button {
@@ -24,67 +16,24 @@ button {
     background-color: #aaa;
 }
 
-#paper {
-    margin: 0;
-}
-
 button:active {
     background-color: #888;
 }
 
-#container {
-    background-color: rgb(163, 79, 0);
-    padding: 44px;
-    border-radius: 6px;
-}
-
-#computer-container {
-    height: 35vh;
-    width: 35vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 22px;
-    background-color: rgb(255, 38, 38);
-}
-
-#result-container {
-    height: 5vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gold;
-    border: 4px solid rgb(200, 164, 0);
-    border-radius: 24px;
-}
-
-#player-container {
-    height: 35vh;
-    width: 35vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 22px;
-    background-color: rgb(0, 191, 255);
-}
-
-#player-choice-container {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-bottom: 1px solid rgb(97, 55, 0);
+#play-again {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 3rem;
+    display: none;
 }
 
 #button-container {
     width: 100%;
-    height: 50%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: none;
-    border-top: 2px solid rgb(97, 55, 0);
 }
